--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -7,243 +7,243 @@
 
 * [[ძვ. წ. 509|509]] ('''245''' [[რომაული კალენდარი|A.V.C.]]) - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
 
-* [[ძვ. წ. 509|509]] ('''245 A.V.C.''') - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
+* [[ძვ. წ. 509|509]] ('''245''' A.V.C.) - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
 
-*[[ძვ. წ. 508|508]] ('''246 A.V.C.''') - პ. ლუკრეციუს ტიტუს ფ. ტრიციპიტინუსი, პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა
+*[[ძვ. წ. 508|508]] ('''246''' A.V.C.) - პ. ლუკრეციუს ტიტუს ფ. ტრიციპიტინუსი, პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა
 
-*[[ძვ. წ. 507|507]] ('''247 A.V.C.''') - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა III, მარკუს ჰორაციუს პულნუს II
+*[[ძვ. წ. 507|507]] ('''247''' A.V.C.) - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა III, მარკუს ჰორაციუს პულნუს II
 
-*[[ძვ. წ. 506|506]] ('''248 A.V.C.''') - სპ. ლარციუს რუსფუსი (ფლავიუსი), ტიტუს ჰერმინიუს აკილინუსი
+*[[ძვ. წ. 506|506]] ('''248''' A.V.C.) - სპ. ლარციუს რუსფუსი (ფლავიუსი), ტიტუს ჰერმინიუს აკილინუსი
 
-*[[ძვ. წ. 505|505]] ('''249 A.V.C.''') - მარკუს ვალერიუს ვოლუსი (ვოლუსუსი?), პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი
+*[[ძვ. წ. 505|505]] ('''249''' A.V.C.) - მარკუს ვალერიუს ვოლუსი (ვოლუსუსი?), პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი
 
-*[[ძვ. წ. 504|504]] ('''250 A.V.C.''') - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა IV, ტიტუს ლუკრეციუს ტრიციპიტინუს II
+*[[ძვ. წ. 504|504]] ('''250''' A.V.C.) - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა IV, ტიტუს ლუკრეციუს ტრიციპიტინუს II
 
-*[[ძვ. წ. 503|503]] ('''251 A.V.C.''') - მემენიუს აგრიპა ც.ფ. ლანატუსი, პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი II
+*[[ძვ. წ. 503|503]] ('''251''' A.V.C.) - მემენიუს აგრიპა ც.ფ. ლანატუსი, პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი II
 
-*[[ძვ. წ. 502|502]] ('''252 A.V.C.''') - ოპიტერ ვერგინიუს ოპიტ. ფ. ტრიკოსტუსი, სპურიუს კასიუს ვესელინუსი (ან ვისელინუსი)
+*[[ძვ. წ. 502|502]] ('''252''' A.V.C.) - ოპიტერ ვერგინიუს ოპიტ. ფ. ტრიკოსტუსი, სპურიუს კასიუს ვესელინუსი (ან ვისელინუსი)
 
-*[[ძვ. წ. 501|501]] ('''253 A.V.C.''') - პოსტუმინუს კომინიუს აურუნკუსი, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი)
+*[[ძვ. წ. 501|501]] ('''253''' A.V.C.) - პოსტუმინუს კომინიუს აურუნკუსი, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი)
 
 ==ძვ. წ. V საუკუნე==
 
-*[[ძვ. წ. 500|500]] ('''254 A.V.C.''') - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
+*[[ძვ. წ. 500|500]] ('''254''' A.V.C.) - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
                               
-*[[ძვ. წ. 499|499]] ('''255 A.V.C.''') - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
+*[[ძვ. წ. 499|499]] ('''255''' A.V.C.) - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
 
-*[[ძვ. წ. 498|498]] ('''256 A.V.C.''') - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
+*[[ძვ. წ. 498|498]] ('''256''' A.V.C.) - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
 
-*[[ძვ. წ. 497|497]] ('''257 A.V.C.''') - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
+*[[ძვ. წ. 497|497]] ('''257''' A.V.C.) - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
 
-*[[ძვ. წ. 496|496]] ('''258 A.V.C.''') - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
+*[[ძვ. წ. 496|496]] ('''258''' A.V.C.) - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
 
-*[[ძვ. წ. 495|495]] ('''259 A.V.C.''') - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი *[[დიქტატორი]] გახდა.
+*[[ძვ. წ. 495|495]] ('''259''' A.V.C.) - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი *[[დიქტატორი]] გახდა.
 
-*[[ძვ. წ. 494|494]] ('''260 A.V.C.''') - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
+*[[ძვ. წ. 494|494]] ('''260''' A.V.C.) - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
 
-*[[ძვ. წ. 493|493]] ('''261 A.V.C.''') - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
+*[[ძვ. წ. 493|493]] ('''261''' A.V.C.) - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
 
-*[[ძვ. წ. 492|492]] ('''262 A.V.C.''') - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
+*[[ძვ. წ. 492|492]] ('''262''' A.V.C.) - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
 
-*[[ძვ. წ. 491|491]] ('''263 A.V.C.''') - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
+*[[ძვ. წ. 491|491]] ('''263''' A.V.C.) - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
 
-*[[ძვ. წ. 490|490]] ('''264 A.V.C.''') - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
+*[[ძვ. წ. 490|490]] ('''264''' A.V.C.) - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
 
-*[[ძვ. წ. 489|489]] ('''265 A.V.C.''') - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
+*[[ძვ. წ. 489|489]] ('''265''' A.V.C.) - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
 
-*[[ძვ. წ. 488|488]] ('''266 A.V.C.''') - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
+*[[ძვ. წ. 488|488]] ('''266''' A.V.C.) - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
 
-*[[ძვ. წ. 487|487]] ('''267 A.V.C.''') - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
+*[[ძვ. წ. 487|487]] ('''267''' A.V.C.) - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
 
-*[[ძვ. წ. 486|486]] ('''268 A.V.C.''') - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
+*[[ძვ. წ. 486|486]] ('''268''' A.V.C.) - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
 
-*[[ძვ. წ. 485|485]] ('''269 A.V.C.''') - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
+*[[ძვ. წ. 485|485]] ('''269''' A.V.C.) - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
 
-*[[ძვ. წ. 484|484]] ('''270 A.V.C.''') - ლუციუს ამილიუს მამ.ფ. მამერცინუსი (მამერკუსი), კ. (კაესო?) ფაბიუს კ.ფ. ვიბულანუსი
+*[[ძვ. წ. 484|484]] ('''270''' A.V.C.) - ლუციუს ამილიუს მამ.ფ. მამერცინუსი (მამერკუსი), კ. (კაესო?) ფაბიუს კ.ფ. ვიბულანუსი
 
-*[[ძვ. წ. 483|483]] ('''271 A.V.C.''') - მ. ფაბიუს კ.ფ. ვიბულანუსი, ლ. ვალერიუს მ.ფ. პოტიტუსი (პუბლიკოლა)
+*[[ძვ. წ. 483|483]] ('''271''' A.V.C.) - მ. ფაბიუს კ.ფ. ვიბულანუსი, ლ. ვალერიუს მ.ფ. პოტიტუსი (პუბლიკოლა)
 
-*[[ძვ. წ. 482|482]] ('''272 A.V.C.''') - ქ. ფაბიუს კ.ფ. ვიბულანუს II, კ. იულიუს ც.ფ. იულიუს (II?)
+*[[ძვ. წ. 482|482]] ('''272''' A.V.C.) - ქ. ფაბიუს კ.ფ. ვიბულანუს II, კ. იულიუს ც.ფ. იულიუს (II?)
 
-*[[ძვ. წ. 481|481]] ('''273 A.V.C.''') - კ. (ც.) ფაბიუს კ.ფ. ვიბულანუს (II?), სპურიუს ფურისუს ფუსუსი (ფუსიუსი)
+*[[ძვ. წ. 481|481]] ('''273''' A.V.C.) - კ. (ც.) ფაბიუს კ.ფ. ვიბულანუს (II?), სპურიუს ფურისუს ფუსუსი (ფუსიუსი)
 
-*[[ძვ. წ. 480|480]] ('''274 A.V.C.''') - მ. ფაბიუს კ.ფ. ვიბულანუს II, კნ, მანლიუს პ.ფ. ცინცინატუსი
+*[[ძვ. წ. 480|480]] ('''274''' A.V.C.) - მ. ფაბიუს კ.ფ. ვიბულანუს II, კნ, მანლიუს პ.ფ. ცინცინატუსი
 
-*[[ძვ. წ. 479|479]] ('''275 A.V.C.''') - კ. ფაბიუს კ.ფ. ვიბულანუს III, ტ. ვერგინიუს ოპეტ.ფ. ტრიკოსტუს რუტილუსი
+*[[ძვ. წ. 479|479]] ('''275''' A.V.C.) - კ. ფაბიუს კ.ფ. ვიბულანუს III, ტ. ვერგინიუს ოპეტ.ფ. ტრიკოსტუს რუტილუსი
 
-*[[ძვ. წ. 478|478]] ('''276 A.V.C.''') - ლ. ამილიუს მან.ფ. მამერცინუს (მამერცუს) II, კ. სერვილიუს სტრუქტუს აჰალა
+*[[ძვ. წ. 478|478]] ('''276''' A.V.C.) - ლ. ამილიუს მან.ფ. მამერცინუს (მამერცუს) II, კ. სერვილიუს სტრუქტუს აჰალა
 
-*[[ძვ. წ. 477|477]] ('''277 A.V.C.''') - კ. ჰორატიუს მ.ფ. პულვილუსი, ტ. მენენიუს აგრიპე ფ. ლანატუსი
+*[[ძვ. წ. 477|477]] ('''277''' A.V.C.) - კ. ჰორატიუს მ.ფ. პულვილუსი, ტ. მენენიუს აგრიპე ფ. ლანატუსი
 
-*[[ძვ. წ. 476|476]] ('''278 A.V.C.''') - ა. ვერგილიუს ტრიკოსტუს რუტილუსი, სპ. სერვილის (პ.ფ.?) სტრუქტუსი
+*[[ძვ. წ. 476|476]] ('''278''' A.V.C.) - ა. ვერგილიუს ტრიკოსტუს რუტილუსი, სპ. სერვილის (პ.ფ.?) სტრუქტუსი
 
-*[[ძვ. წ. 475|475]] ('''279 A.V.C.''') - პუბლიუს ვალერიუს პ.ფ. პოპლიკოლა, კაიუს ნაუტიუს სპ.ფ. რუტილუსი (ან რუფუსი)
+*[[ძვ. წ. 475|475]] ('''279''' A.V.C.) - პუბლიუს ვალერიუს პ.ფ. პოპლიკოლა, კაიუს ნაუტიუს სპ.ფ. რუტილუსი (ან რუფუსი)
 
-*[[ძვ. წ. 474|474]] ('''280 A.V.C.''') - ლ. ფურიუს მედულინუსი, ა. მანლიუს კნ. ვულსო
+*[[ძვ. წ. 474|474]] ('''280''' A.V.C.) - ლ. ფურიუს მედულინუსი, ა. მანლიუს კნ. ვულსო
 
-*[[ძვ. წ. 473|473]] ('''281 A.V.C.''') - ლ. ამილიუს მან.ფ. მამერცუს III, ვოპისკუს იულიუს ც.ფ. იულუსი
+*[[ძვ. წ. 473|473]] ('''281''' A.V.C.) - ლ. ამილიუს მან.ფ. მამერცუს III, ვოპისკუს იულიუს ც.ფ. იულუსი
 
-*[[ძვ. წ. 472|472]] ('''282 A.V.C.''') - ლ. პინარიუს მამერცინუს რუფუსი, პ. ფურიუს მედულინუს ფუსუსი
+*[[ძვ. წ. 472|472]] ('''282''' A.V.C.) - ლ. პინარიუს მამერცინუს რუფუსი, პ. ფურიუს მედულინუს ფუსუსი
 
-*[[ძვ. წ. 471|471]] ('''283 A.V.C.''') - აპიუს კლაუდიუს აპ.ფ. კრასინუს (ინ)რეგილენსის საბინუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი
+*[[ძვ. წ. 471|471]] ('''283''' A.V.C.) - აპიუს კლაუდიუს აპ.ფ. კრასინუს (ინ)რეგილენსის საბინუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი
 
-*[[ძვ. წ. 470|470]] ('''284 A.V.C.''') - ლ. ვალერიუს მ.ფ. პოტიტუს (პუბლიკოლა)II, ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)
+*[[ძვ. წ. 470|470]] ('''284''' A.V.C.) - ლ. ვალერიუს მ.ფ. პოტიტუს (პუბლიკოლა)II, ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)
 
-*[[ძვ. წ. 469|469]] ('''285 A.V.C.''') - ტ. ნუმიციუს პრისცუსი, ა. ვერგინიუს (ტრიკოსტუსი) კელიომონტანუსი
+*[[ძვ. წ. 469|469]] ('''285''' A.V.C.) - ტ. ნუმიციუს პრისცუსი, ა. ვერგინიუს (ტრიკოსტუსი) კელიომონტანუსი
 
-*[[ძვ. წ. 468|468]] ('''286 A.V.C.''') - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუს II, კ. სერვილიუს (სტრუკტუს) პრისკუსი
+*[[ძვ. წ. 468|468]] ('''286''' A.V.C.) - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუს II, კ. სერვილიუს (სტრუკტუს) პრისკუსი
 
-*[[ძვ. წ. 467|467]] ('''287 A.V.C.''') - ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)II, კ. ფაბიუს მ.ფ. ვიბულანუსი
+*[[ძვ. წ. 467|467]] ('''287''' A.V.C.) - ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)II, კ. ფაბიუს მ.ფ. ვიბულანუსი
 
-*[[ძვ. წ. 466|466]] ('''288 A.V.C.''') - კ. სერვილიუს პრისკუსი II, სპ. პოსტუმინუს ა.ფ. ალბუს რეგილენსისი
+*[[ძვ. წ. 466|466]] ('''288''' A.V.C.) - კ. სერვილიუს პრისკუსი II, სპ. პოსტუმინუს ა.ფ. ალბუს რეგილენსისი
 
-*[[ძვ. წ. 465|465]] ('''289 A.V.C.''') - კ. ფაბიუს მ.ფ. ვიბულანუსი II, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი II,
+*[[ძვ. წ. 465|465]] ('''289''' A.V.C.) - კ. ფაბიუს მ.ფ. ვიბულანუსი II, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი II,
 
-*[[ძვ. წ. 464|464]] ('''290 A.V.C.''') - ა. პოსტუმიუს ა.ფ. ალბუს რეგილენსისი, სპ. ფურიუს მედულინუს ფუსუსი
+*[[ძვ. წ. 464|464]] ('''290''' A.V.C.) - ა. პოსტუმიუს ა.ფ. ალბუს რეგილენსისი, სპ. ფურიუს მედულინუს ფუსუსი
 
-*[[ძვ. წ. 463|463]] ('''291 A.V.C.''') - პ. სერვილიუს სპ.ფ. პრისცუსი, ლ. ებუტიუს ტ.ფ. ჰელვა.
+*[[ძვ. წ. 463|463]] ('''291''' A.V.C.) - პ. სერვილიუს სპ.ფ. პრისცუსი, ლ. ებუტიუს ტ.ფ. ჰელვა.
 
-*[[ძვ. წ. 462|462]] ('''292 A.V.C.''') - ლ. ლუკრეციუს ტ.ფ. ტრიციპიტინუსი, ტ. ვეტურიუს ტ.ფ. გემინუს ციკურინუსი
+*[[ძვ. წ. 462|462]] ('''292''' A.V.C.) - ლ. ლუკრეციუს ტ.ფ. ტრიციპიტინუსი, ტ. ვეტურიუს ტ.ფ. გემინუს ციკურინუსი
 
-*[[ძვ. წ. 461|461]] ('''293 A.V.C.''') - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
+*[[ძვ. წ. 461|461]] ('''293''' A.V.C.) - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
 
-*[[ძვ. წ. 460|460]] ('''294 A.V.C.''') - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
+*[[ძვ. წ. 460|460]] ('''294''' A.V.C.) - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
 
-*[[ძვ. წ. 459|459]] ('''295 A.V.C.''') - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
+*[[ძვ. წ. 459|459]] ('''295''' A.V.C.) - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
 
-*[[ძვ. წ. 458|458]] ('''296 A.V.C.''') - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
+*[[ძვ. წ. 458|458]] ('''296''' A.V.C.) - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
 
-*[[ძვ. წ. 457|457]] ('''297 A.V.C.''') - მ. (ან კ.) ჰორაციუს მ.ფ. პულვილუს II, კ. მინუციუს პ.ფ. ესკილინუსი (აუგურინუსი)
+*[[ძვ. წ. 457|457]] ('''297''' A.V.C.) - მ. (ან კ.) ჰორაციუს მ.ფ. პულვილუს II, კ. მინუციუს პ.ფ. ესკილინუსი (აუგურინუსი)
 
-*[[ძვ. წ. 456|456]] ('''298 A.V.C.''') - მ. ვალერიუს მ.ფ. მაქსიმუს ლაკტუკა, სპ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
+*[[ძვ. წ. 456|456]] ('''298''' A.V.C.) - მ. ვალერიუს მ.ფ. მაქსიმუს ლაკტუკა, სპ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
 
-*[[ძვ. წ. 455|455]] ('''299 A.V.C.''') - ტიტუს რომილიუს ტ.ფ. როკუს ვატიკანუსი, კ. ვეტურიუს ციკურინუსი
+*[[ძვ. წ. 455|455]] ('''299''' A.V.C.) - ტიტუს რომილიუს ტ.ფ. როკუს ვატიკანუსი, კ. ვეტურიუს ციკურინუსი
 
-*[[ძვ. წ. 454|454]] ('''300 A.V.C.''') - სპ. ტარპეიუს მ.ფ. მონტანუს კაპიტოლინუსი, ა. ატერნიუს (ატენიუს) ვარუს ფონტინალისი
+*[[ძვ. წ. 454|454]] ('''300''' A.V.C.) - სპ. ტარპეიუს მ.ფ. მონტანუს კაპიტოლინუსი, ა. ატერნიუს (ატენიუს) ვარუს ფონტინალისი
 
-*[[ძვ. წ. 453|453]] ('''301 A.V.C.''') - სექს. კინკტილიუსი სექხ.ფ. (ვარუსი), პ. კურიატუს (კურიატიუს) ფისტუს ტრიგემინუსი
+*[[ძვ. წ. 453|453]] ('''301''' A.V.C.) - სექს. კინკტილიუსი სექხ.ფ. (ვარუსი), პ. კურიატუს (კურიატიუს) ფისტუს ტრიგემინუსი
 
-*[[ძვ. წ. 452|452]] ('''302 A.V.C.''') - ტ. (კ.) მენენიუს აგრიპე ფ. ლანატუსი, პ. სესტიუს კ.ფ. კაპიტო (კაპიტოლინუსი) ვატიკანუსი
+*[[ძვ. წ. 452|452]] ('''302''' A.V.C.) - ტ. (კ.) მენენიუს აგრიპე ფ. ლანატუსი, პ. სესტიუს კ.ფ. კაპიტო (კაპიტოლინუსი) ვატიკანუსი
 
-*[[ძვ. წ. 451|451]] ('''303 A.V.C.''') - აპიუს კლაუდიუს აპ.ფ. კრასუს ინრეგილენსის საბინუს II, ტიტუს გენუციუს ლ.ფ. აუგურინუსი
+*[[ძვ. წ. 451|451]] ('''303''' A.V.C.) - აპიუს კლაუდიუს აპ.ფ. კრასუს ინრეგილენსის საბინუს II, ტიტუს გენუციუს ლ.ფ. აუგურინუსი
 
-*[[ძვ. წ. 450|450]] ('''304 A.V.C.''') - *[[დეცემვირი]]: აპლიუს კლაუდიუსი, მ. ცორნელიუს მალუგინენსისი, მ. სერგიუსი, ლ. მინუციუსი, ქ. ფაბიუს ვიბულანუსი, ქ. პოეტელიუსი, ტ. ანტონიუს მერენდა, კ. დუილიუსი, ს. ოპიუს კორნიცენი, მ. რაბულეიუსი
+*[[ძვ. წ. 450|450]] ('''304''' A.V.C.) - *[[დეცემვირი]]: აპლიუს კლაუდიუსი, მ. ცორნელიუს მალუგინენსისი, მ. სერგიუსი, ლ. მინუციუსი, ქ. ფაბიუს ვიბულანუსი, ქ. პოეტელიუსი, ტ. ანტონიუს მერენდა, კ. დუილიუსი, ს. ოპიუს კორნიცენი, მ. რაბულეიუსი
 
-*[[ძვ. წ. 449|449]] ('''305 A.V.C.''') - ლ. ვალერიუს პ.ფ. პოტიტუსი, მარკუს ჰორაციუს ბარბატუსი.
+*[[ძვ. წ. 449|449]] ('''305''' A.V.C.) - ლ. ვალერიუს პ.ფ. პოტიტუსი, მარკუს ჰორაციუს ბარბატუსი.
 
-*[[ძვ. წ. 448|448]] ('''306 A.V.C.''') - ლარს (ან სპ.) ჰერმინიუს კორტინესანუსი (აკილინუსი), ტ. ვერგინიუს ტრიკოსტუს კელიომონტანუსი
+*[[ძვ. წ. 448|448]] ('''306''' A.V.C.) - ლარს (ან სპ.) ჰერმინიუს კორტინესანუსი (აკილინუსი), ტ. ვერგინიუს ტრიკოსტუს კელიომონტანუსი
 
-*[[ძვ. წ. 447|447]] ('''307 A.V.C.''') - მ. გეგანიუს მ.ფ. მაცერინუსი, კ. იულიუსი (იულუსი?)
+*[[ძვ. წ. 447|447]] ('''307''' A.V.C.) - მ. გეგანიუს მ.ფ. მაცერინუსი, კ. იულიუსი (იულუსი?)
 
-*[[ძვ. წ. 446|446]] ('''308 A.V.C.''') - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი IV, აგრიპა ფურიუს ფუსუსი
+*[[ძვ. წ. 446|446]] ('''308''' A.V.C.) - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი IV, აგრიპა ფურიუს ფუსუსი
 
-*[[ძვ. წ. 445|445]] ('''309 A.V.C.''') - მარკუს გენუციუს აუგურინუსი, კ. (გაიუსი ან აგრიპა) კურტიუს თილო
+*[[ძვ. წ. 445|445]] ('''309''' A.V.C.) - მარკუს გენუციუს აუგურინუსი, კ. (გაიუსი ან აგრიპა) კურტიუს თილო
 
-*[[ძვ. წ. 444|444]] ('''310 A.V.C.''') - 3 თვის მანძილზე სამხედრო ტრიბუნები, შემდეგ ლ. პაპირიუს მუგილანუსი და ლ. სემპრონიუს ა.ფ. ატრატინუსი
+*[[ძვ. წ. 444|444]] ('''310''' A.V.C.) - 3 თვის მანძილზე სამხედრო ტრიბუნები, შემდეგ ლ. პაპირიუს მუგილანუსი და ლ. სემპრონიუს ა.ფ. ატრატინუსი
 
-*[[ძვ. წ. 443|443]] ('''311 A.V.C.''') - მარკუს გეგანიუს მ.ფ. მაცერინუსი II, კ. კინკტიუს კაპიტოლინუს ბარბატუსი V
+*[[ძვ. წ. 443|443]] ('''311''' A.V.C.) - მარკუს გეგანიუს მ.ფ. მაცერინუსი II, კ. კინკტიუს კაპიტოლინუს ბარბატუსი V
 
-*[[ძვ. წ. 442|442]] ('''312 A.V.C.''') - მ. ფაბიუს კ.ფ. ვიბულანუსი, პოსტუმიუს ებუტიუს ჰელვა კორნიცენი
+*[[ძვ. წ. 442|442]] ('''312''' A.V.C.) - მ. ფაბიუს კ.ფ. ვიბულანუსი, პოსტუმიუს ებუტიუს ჰელვა კორნიცენი
 
-*[[ძვ. წ. 441|441]] ('''313 A.V.C.''') - გაიუს ფურიუს პაცილუს ფუსუსი, მანიუს პაპირიუს კრასუსი
+*[[ძვ. წ. 441|441]] ('''313''' A.V.C.) - გაიუს ფურიუს პაცილუს ფუსუსი, მანიუს პაპირიუს კრასუსი
 
-*[[ძვ. წ. 440|440]] ('''314 A.V.C.''') - პროკულუს გეგანიუს მაცერინუსი, ლ. მენენიუს აგრიპე ლანატუსი II
+*[[ძვ. წ. 440|440]] ('''314''' A.V.C.) - პროკულუს გეგანიუს მაცერინუსი, ლ. მენენიუს აგრიპე ლანატუსი II
 
-*[[ძვ. წ. 439|439]] ('''315 A.V.C.''') - აგრიპა მენენიუს ტ.ფ. ლანატუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი VI
+*[[ძვ. წ. 439|439]] ('''315''' A.V.C.) - აგრიპა მენენიუს ტ.ფ. ლანატუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი VI
 
-*[[ძვ. წ. 438|438]] ('''316 A.V.C.''') - სამხედრო ტრიბუნები
+*[[ძვ. წ. 438|438]] ('''316''' A.V.C.) - სამხედრო ტრიბუნები
 
-*[[ძვ. წ. 437|437]] ('''317 A.V.C.''') - მარკუს გეგანიუს მ.ფ. მაცერინუსი III, ლუციუს სერგიუს ლ.ფ. ფიდენასი
+*[[ძვ. წ. 437|437]] ('''317''' A.V.C.) - მარკუს გეგანიუს მ.ფ. მაცერინუსი III, ლუციუს სერგიუს ლ.ფ. ფიდენასი
 
-*[[ძვ. წ. 436|436]] ('''318 A.V.C.''') - ლ. პაპირიუს კრასუსი, მ. კორნელიუს მალუგინენსისი
+*[[ძვ. წ. 436|436]] ('''318''' A.V.C.) - ლ. პაპირიუს კრასუსი, მ. კორნელიუს მალუგინენსისი
 
-*[[ძვ. წ. 435|435]] ('''319 A.V.C.''') - კ. იულიუს იულუსი II, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი
+*[[ძვ. წ. 435|435]] ('''319''' A.V.C.) - კ. იულიუს იულუსი II, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი
 
-*[[ძვ. წ. 434|434]] ('''320 A.V.C.''') - კ. იულიუს იულუსი III, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი II
+*[[ძვ. წ. 434|434]] ('''320''' A.V.C.) - კ. იულიუს იულუსი III, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი II
 
-*[[ძვ. წ. 433|433]] ('''321 A.V.C.''') - ორი წლის განმავლობაში სამხედრო ტრიბუნები
+*[[ძვ. წ. 433|433]] ('''321''' A.V.C.) - ორი წლის განმავლობაში სამხედრო ტრიბუნები
 
-*[[ძვ. წ. 431|431]] ('''323 A.V.C.''') - ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი, კ. იულიუს მენტო
+*[[ძვ. წ. 431|431]] ('''323''' A.V.C.) - ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი, კ. იულიუს მენტო
 
-*[[ძვ. წ. 430|430]] ('''324 A.V.C.''') - ლ. პაპირიუს კრასუსი, ლ. იულიუს ვოპ.ფ. იულუსი
+*[[ძვ. წ. 430|430]] ('''324''' A.V.C.) - ლ. პაპირიუს კრასუსი, ლ. იულიუს ვოპ.ფ. იულუსი
 
-*[[ძვ. წ. 429|429]] ('''325 A.V.C.''') - ჰოსტუს ლუკრეტიუს ტრიციპიტინუს, ლ. სერგიუს კ.ფ. ფიდენასი II
+*[[ძვ. წ. 429|429]] ('''325''' A.V.C.) - ჰოსტუს ლუკრეტიუს ტრიციპიტინუს, ლ. სერგიუს კ.ფ. ფიდენასი II
 
-*[[ძვ. წ. 428|428]] ('''326 A.V.C.''') - ა. კორნელიუს მ.ფ. კოსუსი, ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი II
+*[[ძვ. წ. 428|428]] ('''326''' A.V.C.) - ა. კორნელიუს მ.ფ. კოსუსი, ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი II
 
-*[[ძვ. წ. 427|427]] ('''327 A.V.C.''') - კ. სერვილიუს სტრუკტუს აჰალა, ლ. პაპირიუს ლ.ფ. მუგილანუსი II
+*[[ძვ. წ. 427|427]] ('''327''' A.V.C.) - კ. სერვილიუს სტრუკტუს აჰალა, ლ. პაპირიუს ლ.ფ. მუგილანუსი II
 
-*[[ძვ. წ. 426|426]] ('''328 A.V.C.''') - სამხედრო ტრიბუნები სამი წლის მანძილზე
+*[[ძვ. წ. 426|426]] ('''328''' A.V.C.) - სამხედრო ტრიბუნები სამი წლის მანძილზე
 
-*[[ძვ. წ. 423|423]] ('''331 A.V.C.''') - კ. სემპრონიუს ატრატინუსი, კ. ფაბიუს კ.ფ. ვიბულანუსი
+*[[ძვ. წ. 423|423]] ('''331''' A.V.C.) - კ. სემპრონიუს ატრატინუსი, კ. ფაბიუს კ.ფ. ვიბულანუსი
 
-*[[ძვ. წ. 422|422]] ('''332 A.V.C.''') - სამხედრო ტრიბუნები 
+*[[ძვ. წ. 422|422]] ('''332''' A.V.C.) - სამხედრო ტრიბუნები 
 
-*[[ძვ. წ. 421|421]] ('''333 A.V.C.''') - კნ. ფაბიუს ვიბულანუსი, ტ. კინკტუსი ტ.ფ. კაპიტოლინუს ბარბატუსი
+*[[ძვ. წ. 421|421]] ('''333''' A.V.C.) - კნ. ფაბიუს ვიბულანუსი, ტ. კინკტუსი ტ.ფ. კაპიტოლინუს ბარბატუსი
 
-*[[ძვ. წ. 420|420]] ('''334 A.V.C.''') - სამხედრო ტრიბუნები: ლ. კინკტუს ცინცინატუსი III, ლ. ფურიუს მედულინუსი II, მ. მანლიუსი, ა. სემპრონიუს ატრატინუსი
+*[[ძვ. წ. 420|420]] ('''334''' A.V.C.) - სამხედრო ტრიბუნები: ლ. კინკტუს ცინცინატუსი III, ლ. ფურიუს მედულინუსი II, მ. მანლიუსი, ა. სემპრონიუს ატრატინუსი
 
-*[[ძვ. წ. 419|419]] ('''335 A.V.C.''') - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი, პ. ლუკრეციუს ტრიციპიტინუსი, სპ. ნაუტიუს რუტილუსი
+*[[ძვ. წ. 419|419]] ('''335''' A.V.C.) - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი, პ. ლუკრეციუს ტრიციპიტინუსი, სპ. ნაუტიუს რუტილუსი
 
-*[[ძვ. წ. 418|418]] ('''336 A.V.C.''') - სამხედრო ტრიბუნები: ლ. სერგიუს ფიდენასი, მ. პაპირიუს მუგილანუსი, კ. სერვილიუს პრისკუსი
+*[[ძვ. წ. 418|418]] ('''336''' A.V.C.) - სამხედრო ტრიბუნები: ლ. სერგიუს ფიდენასი, მ. პაპირიუს მუგილანუსი, კ. სერვილიუს პრისკუსი
 
-*[[ძვ. წ. 417|417]] ('''337 A.V.C.''') - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი II, პ. ლუკრეციუს ტრიციპიტინუსი II, სპ. რუტილიუს კრასუსი
+*[[ძვ. წ. 417|417]] ('''337''' A.V.C.) - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი II, პ. ლუკრეციუს ტრიციპიტინუსი II, სპ. რუტილიუს კრასუსი
 
-*[[ძვ. წ. 416|416]] ('''338 A.V.C.''') - სამხედრო ტრიბუნები: ა. სემპრონიუს ალვატინუსი III, მ. პაპირიუს მუგილანუსი II, სპ. ნაუტიუს რუტილუსი
+*[[ძვ. წ. 416|416]] ('''338''' A.V.C.) - სამხედრო ტრიბუნები: ა. სემპრონიუს ალვატინუსი III, მ. პაპირიუს მუგილანუსი II, სპ. ნაუტიუს რუტილუსი
 
-*[[ძვ. წ. 415|415]] ('''339 A.V.C.''') - სამხედრო ტრიბუნები: პ. კორნელიუს კოსუსი, კ. ვალერიუს პოტიტუსი, კ. კინკტუს ცინცინატუსი, ნ. ფაბიუს ვიბულანუსი
+*[[ძვ. წ. 415|415]] ('''339''' A.V.C.) - სამხედრო ტრიბუნები: პ. კორნელიუს კოსუსი, კ. ვალერიუს პოტიტუსი, კ. კინკტუს ცინცინატუსი, ნ. ფაბიუს ვიბულანუსი
 
-*[[ძვ. წ. 414|414]] ('''340 A.V.C.''') - სამხედრო ტრიბუნები: კ. კორნელიუს კოსუსი, ლ. ვალერიუს პოტიტუსი, ლ. ფაბიუს ვიბულანუსი II, მ. პოსტუმიუს რეგილენსისი
+*[[ძვ. წ. 414|414]] ('''340''' A.V.C.) - სამხედრო ტრიბუნები: კ. კორნელიუს კოსუსი, ლ. ვალერიუს პოტიტუსი, ლ. ფაბიუს ვიბულანუსი II, მ. პოსტუმიუს რეგილენსისი
 
-*[[ძვ. წ. 413|413]] ('''341 A.V.C.''') - აულუს მარკუს კორნელიუს კოსუსი, ლუციუს ფურიუს ლ.ფ. მედულინუსი
+*[[ძვ. წ. 413|413]] ('''341''' A.V.C.) - აულუს მარკუს კორნელიუს კოსუსი, ლუციუს ფურიუს ლ.ფ. მედულინუსი
 
-*[[ძვ. წ. 412|412]] ('''342 A.V.C.''') - კ. ფაბიუს ამბუსტუს ვიბულანუსი, კ. ფურიუს პაცილუსი
+*[[ძვ. წ. 412|412]] ('''342''' A.V.C.) - კ. ფაბიუს ამბუსტუს ვიბულანუსი, კ. ფურიუს პაცილუსი
 
-*[[ძვ. წ. 411|411]] ('''343 A.V.C.''') - ლ. პაპირიუს ლ.ფ. მუგილანუსი (ატრატინუსი), სპ. (ან კ.) ნაუტიუს სპ.ფ. რუტილუსი
+*[[ძვ. წ. 411|411]] ('''343''' A.V.C.) - ლ. პაპირიუს ლ.ფ. მუგილანუსი (ატრატინუსი), სპ. (ან კ.) ნაუტიუს სპ.ფ. რუტილუსი
 
-*[[ძვ. წ. 410|410]] ('''344 A.V.C.''') - მანიუს აემილიუს მამ.ფ. მამერიცინუსი, კ. ვალერიუს ლ.ფ. პოტიტუსი ვოლუსუსი
+*[[ძვ. წ. 410|410]] ('''344''' A.V.C.) - მანიუს აემილიუს მამ.ფ. მამერიცინუსი, კ. ვალერიუს ლ.ფ. პოტიტუსი ვოლუსუსი
 
-*[[ძვ. წ. 409|409]] ('''345 A.V.C.''') - კნ. კორნელიუს ა.ფ. კოსუსი, ლ. ფურიუს ლ.ფ. მედულინუსი III
+*[[ძვ. წ. 409|409]] ('''345''' A.V.C.) - კნ. კორნელიუს ა.ფ. კოსუსი, ლ. ფურიუს ლ.ფ. მედულინუსი III
 
-*[[ძვ. წ. 408|408]] ('''346 A.V.C.''') - 15 წლის მანძილზე სამხედრო ტრიბუნების მართვა
+*[[ძვ. წ. 408|408]] ('''346''' A.V.C.) - 15 წლის მანძილზე სამხედრო ტრიბუნების მართვა
 
 ==ძვ. წ. IV საუკუნე==
 
-*[[ძვ. წ. 394|394]] ('''360 A.V.C.''') - კამილუსის პირველი დიქტატურა
+*[[ძვ. წ. 394|394]] ('''360''' A.V.C.) - კამილუსის პირველი დიქტატურა
 
-*[[ძვ. წ. 393|393]] ('''361 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 393|393]] ('''361''' A.V.C.) - ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-*[[ძვ. წ. 392|392]] ('''362 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 392|392]] ('''362''' A.V.C.) - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-*[[ძვ. წ. 391|391]] ('''363 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 391|391]] ('''363''' A.V.C.) - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-*[[ძვ. წ. 390|390]] ('''364 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი. ივლისის კალენდების შემდეგ: ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
+*[[ძვ. წ. 390|390]] ('''364''' A.V.C.) - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი. ივლისის კალენდების შემდეგ: ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
 
-*[[ძვ. წ. 389|389]] ('''365 A.V.C.''') - სამხედრო ტრიბუნები
+*[[ძვ. წ. 389|389]] ('''365''' A.V.C.) - სამხედრო ტრიბუნები
 
-*[[ძვ. წ. 388|388]] ('''366 A.V.C.''') - დიქტატორი მ. ფურიუს კამილუსი, შემდეგ სამხედრო ტრიბუნები ლ. ვალერიუს პუბლიკოლა II, ლ. ვირგინიუსი, პ. კორნელიუს, ა. მანლიუსი, ლ. ამილიუსი, ლ. პოსტუმიუსი
+*[[ძვ. წ. 388|388]] ('''366''' A.V.C.) - დიქტატორი მ. ფურიუს კამილუსი, შემდეგ სამხედრო ტრიბუნები ლ. ვალერიუს პუბლიკოლა II, ლ. ვირგინიუსი, პ. კორნელიუს, ა. მანლიუსი, ლ. ამილიუსი, ლ. პოსტუმიუსი
 
-*[[ძვ. წ. 387|387]] ('''367 A.V.C.''') - სამხედრო ტრიბუნები ტ. კინტიუს ცინცინატუსი, ქ. სერვილიუს ფიდენასი V, ლ. იულიუს ტრეციპიტინუსი, სერვიუს სულპიციუს რუფუსი
+*[[ძვ. წ. 387|387]] ('''367''' A.V.C.) - სამხედრო ტრიბუნები ტ. კინტიუს ცინცინატუსი, ქ. სერვილიუს ფიდენასი V, ლ. იულიუს ტრეციპიტინუსი, სერვიუს სულპიციუს რუფუსი
 
-*[[ძვ. წ. 386|386]] ('''368 A.V.C.''') - სამხედრო ტრიბუნები ლ. პაპირიუსი, კ. სერგიუსი, ლ. ამილიუსი II, ლ. მენენიუსი, ლ. პუბლიკოლა III
+*[[ძვ. წ. 386|386]] ('''368''' A.V.C.) - სამხედრო ტრიბუნები ლ. პაპირიუსი, კ. სერგიუსი, ლ. ამილიუსი II, ლ. მენენიუსი, ლ. პუბლიკოლა III
 
-*[[ძვ. წ. 385|385]] ('''369 A.V.C.''') - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი, სერვიუს კორნელიუს მალუგინესისი, ქ. სერვილიუს ფიდენასი VI, ლ. კინტიუს ცონცინატუსი (II?), ლ. ჰორაციუსი, ტ. ვალერიუსი (*[[382]] წლამდე ესენი მმართველობდნენ).
+*[[ძვ. წ. 385|385]] ('''369''' A.V.C.) - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი, სერვიუს კორნელიუს მალუგინესისი, ქ. სერვილიუს ფიდენასი VI, ლ. კინტიუს ცონცინატუსი (II?), ლ. ჰორაციუსი, ტ. ვალერიუსი (*[[382]] წლამდე ესენი მმართველობდნენ).
 
-*[[ძვ. წ. 381|381]] ('''373 A.V.C.''') - სამხედრო ტრიბუნები სერვიუს კორნელიუს მალუგინესისი IV, ქ. სერვილიუსი, სერვილიუს სულპიციუსი, ლ. ამილიუსი IV
+*[[ძვ. წ. 381|381]] ('''373''' A.V.C.) - სამხედრო ტრიბუნები სერვიუს კორნელიუს მალუგინესისი IV, ქ. სერვილიუსი, სერვილიუს სულპიციუსი, ლ. ამილიუსი IV
 
-*[[ძვ. წ. 380|380]] ('''374 A.V.C.''') - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
+*[[ძვ. წ. 380|380]] ('''374''' A.V.C.) - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
 
-*[[ძვ. წ. 379|379]] ('''375 A.V.C.''') - სამხედრო ტრიბუნები ლუციუს ვალერიუსი III, კ. სერგიუსი III, ლ. მენენიუსი II, სპ. პაპირიუსი, სერვიუს კორნელიუს მალუგინენსისი
+*[[ძვ. წ. 379|379]] ('''375''' A.V.C.) - სამხედრო ტრიბუნები ლუციუს ვალერიუსი III, კ. სერგიუსი III, ლ. მენენიუსი II, სპ. პაპირიუსი, სერვიუს კორნელიუს მალუგინენსისი
 
-*[[ძვ. წ. 378|378]] ('''376 A.V.C.''') - სამხედრო ტრიბუნები პ. და კ. მანლიუსები, ლ. იულიუსი, კ. სექსტილიუსი, მ. ალბინიუსი, ლ. ანტისციუსი (პარიციუსი და პლებსი)
+*[[ძვ. წ. 378|378]] ('''376''' A.V.C.) - სამხედრო ტრიბუნები პ. და კ. მანლიუსები, ლ. იულიუსი, კ. სექსტილიუსი, მ. ალბინიუსი, ლ. ანტისციუსი (პარიციუსი და პლებსი)
 
-*[[ძვ. წ. 377|377]] ('''377 A.V.C.''') - სამხედრო ტრიბუნები სპ. ფურიუსი, ლ. სერვილიუს II, ც. ლიცინიუსი, პ. კლაელიუსი, მ. ჰორაციუსი, ლ. გეგანიუსი.
+*[[ძვ. წ. 377|377]] ('''377''' A.V.C.) - სამხედრო ტრიბუნები სპ. ფურიუსი, ლ. სერვილიუს II, ც. ლიცინიუსი, პ. კლაელიუსი, მ. ჰორაციუსი, ლ. გეგანიუსი.
 
-*[[ძვ. წ. 376|376]] ('''378 A.V.C.''') - სამხედრო ტრიბუნები ლ. ამილიუსი, პ. ვალერიუს IV, კ. ვეტურიუს სერვიუს სულპიციუსი, ლ. და კ. კინტიუს ცინცინატუსები
+*[[ძვ. წ. 376|376]] ('''378''' A.V.C.) - სამხედრო ტრიბუნები ლ. ამილიუსი, პ. ვალერიუს IV, კ. ვეტურიუს სერვიუს სულპიციუსი, ლ. და კ. კინტიუს ცინცინატუსები
 
-*[[ძვ. წ. 375|375]] ('''379 A.V.C.''') - მხოლოდ ორი ტრიბუნი, კ. ლიცინიუს კლავიუსი, ლუციუს სექსტიუსი
+*[[ძვ. წ. 375|375]] ('''379''' A.V.C.) - მხოლოდ ორი ტრიბუნი, კ. ლიცინიუს კლავიუსი, ლუციუს სექსტიუსი
 
-*[[ძვ. წ. 374|374]] ('''380 A.V.C.''') -  სამხედრო ტრიბუნები ლ. ლურიუსი, ა. მანლიუსი, სერვიუს სულპიციუსი, სერვიუს კორნელიუსი, პ. და კ. ვალერიუსები.
+*[[ძვ. წ. 374|374]] ('''380''' A.V.C.) -  სამხედრო ტრიბუნები ლ. ლურიუსი, ა. მანლიუსი, სერვიუს სულპიციუსი, სერვიუს კორნელიუსი, პ. და კ. ვალერიუსები.
 
 {{ესკიზი}}
 
